--- a/GameLibrary/Pages/Admin/Games/Delete.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Delete.cshtml
@@ -10,49 +10,52 @@
         <h1>Delete</h1>
         <h3>Are you sure you want to delete this game?</h3>
     </header>
+	<!--Game Details to Delete-->
+	<div class="container py-5">
+		<div class="row">
+			<div class="col-lg-6 col-md-12">
+				<dl class="row">
+					<dt class="col-sm-4" style="color:#FFD43B;">
+						Title:
+					</dt>
+					<dd class="col-sm-8">
+						@Model.Game!.Title
+					</dd>
+					<dt class="col-sm-4" style="color:#FFD43B;">
+						Genre:
+					</dt>
+					<dd class="col-sm-8">
+						@Model.Game!.Genre
+					</dd>
+					<dt class="col-sm-4" style="color:#FFD43B;">
+						Release Date:
+					</dt>
+					<dd class="col-sm-8">
+						@Model.Game!.ReleaseDate.ToString("MMMM dd, yyyy")
+					</dd>
+					<dt class="col-sm-4" style="color:#FFD43B;">
+						Description:
+					</dt>
+					<dd class="col-sm-8">
+						@Model.Game!.Description
+					</dd>
+				</dl>
+			</div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <dl class="row">
-                <dt class="col-sm-4">
-                    @Html.DisplayNameFor(model => model.Game!.Title)
-                </dt>
-                <dd class="col-sm-8">
-                    @Html.DisplayFor(model => model.Game!.Title)
-                </dd>
-                <dt class="col-sm-4">
-                    @Html.DisplayNameFor(model => model.Game!.Genre)
-                </dt>
-                <dd class="col-sm-8">
-                    @Html.DisplayFor(model => model.Game!.Genre)
-                </dd>
-                <dt class="col-sm-4">
-                    Release Date
-                </dt>
-                <dd class="col-sm-8">
-                    @Html.DisplayFor(model => model.Game!.ReleaseDate.Date)
-                </dd>
-                <dt class="col-sm-4">
-                    @Html.DisplayNameFor(model => model.Game!.Description)
-                </dt>
-                <dd class="col-sm-8">
-                    @Html.DisplayFor(model => model.Game!.Description)
-                </dd>
-            </dl>
-        </div>
+			<div class="col-lg-6 col-md-12 text-center">
+				<img src="@Model.Game!.ImageUrl" class="" title="Game Image" style="width: 400px; height: auto;" />
+				<span asp-validation-for="Game!.ImageUrl" class="text-danger"></span>
+			</div>
+		</div>
 
-        <div class="col-md-6">
-            <label asp-for="Game!.ImageUrl" class="control-label">Current Image</label><br />
-            <img src="@Model.Game!.ImageUrl" class="img-thumbnail" title="Game Image" />
-            <span asp-validation-for="Game!.ImageUrl" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div class="row mt-3">
-        <form method="post">
-            <input type="hidden" asp-for="Game!.Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" style="background-color: #420599; color: #FFD43B;" />
-            <a asp-page="./Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
-        </form>
-    </div>
+		<div class="row mt-3">
+			<div class="col-12 text-center">
+				<form method="post">
+					<input type="hidden" asp-for="Game!.Id" />
+					<input type="submit" value="Delete" class="btn btn-danger" style="background-color: #420599; color: #FFD43B;" />
+					<a asp-page="./Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
