--- a/GameLibrary/Pages/Admin/Games/Edit.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Edit.cshtml
@@ -9,68 +9,84 @@
 	<header>
 		<h1>Edit Game</h1>
 	</header>
-
-		<div class="row">
-			<div class="col-md-4">
-				<form method="post" enctype="multipart/form-data">
-					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+	<!--Edit Game Details Section -->
+	<div class="container-fluid py-2">
+		<form method="post" enctype="multipart/form-data">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
 					<input type="hidden" asp-for="Game!.Id" />
 					<div class="form-group">
-						<label asp-for="Game!.Title" class="control-label">Title</label>
+						<label asp-for="Game!.Title" class="control-label">Title:</label>
 						<input asp-for="Game!.Title" class="form-control" />
 						<span asp-validation-for="Game!.Title" class="text-danger"></span>
 					</div>
 					<div class="form-group">
-						<label asp-for="ImageFile" class="control-label">New Image</label>
+						<label asp-for="ImageFile" class="control-label">New Image:</label>
 						<input type="file" asp-for="ImageFile" class="form-control" onchange="previewImage(event)" />
 						<span asp-validation-for="ImageFile" class="text-danger"></span>
 					</div>
 					<div class="form-group">
-						<label asp-for="Game!.Genre" class="control-label">Genre</label>
+						<label asp-for="Game!.Genre" class="control-label">Genre:</label>
 						<input asp-for="Game!.Genre" class="form-control" />
 						<span asp-validation-for="Game!.Genre" class="text-danger"></span>
 					</div>
 					<div class="form-group">
-						<label asp-for="Game!.ReleaseDate.Date" class="control-label">Release Date</label>
-						<input asp-for="Game!.ReleaseDate.Date" class="form-control" />
-                    <span asp-validation-for="Game!.ReleaseDate.Date" class="text-danger"></span>
+						<label asp-for="Game!.ReleaseDate.Date" class="control-label">Release Date:</label>
+						<input asp-for="Game.ReleaseDate" class="form-control" type="date" />
+						<span asp-validation-for="Game!.ReleaseDate.Date" class="text-danger"></span>
 					</div>
 					<div class="form-group">
-						<label asp-for="Game!.Description" class="control-label">Description</label>
-						<input asp-for="Game!.Description" class="form-control" />
+						<label asp-for="Game!.Developer" class="control-label">Developer:</label>
+						<input asp-for="Game!.Developer" class="form-control" />
+						<span asp-validation-for="Game!.Developer" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.Publisher" class="control-label">Publisher:</label>
+						<input asp-for="Game!.Publisher" class="form-control" />
+						<span asp-validation-for="Game!.Publisher" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.Platform" class="control-label">Platform:</label>
+						<input asp-for="Game!.Platform" class="form-control" />
+						<span asp-validation-for="Game!.Platform" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.Price" class="control-label">Price:</label>
+						<input asp-for="Game!.Price" class="form-control" type="number" step="0.01" />
+						<span asp-validation-for="Game!.Price" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.Description" class="control-label">Description:</label>
+						<textarea asp-for="Game!.Description" class="form-control flex-grow-1"></textarea>
 						<span asp-validation-for="Game!.Description" class="text-danger"></span>
 					</div>
-					<div class="form-group">
-						<input type="submit" value="Save" class="btn btn-primary" style="background-color: #420599; color: #FFD43B;" />
-						<a asp-page="./Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
+				</div>
+				<div class="col-lg-8 col-md-auto py-2 align-items-center">
+					<!--Current and New Game Image-->
+					<div class="row">
+						<div class="col-md-6 text-center align-items-center">
+							<label asp-for="Game!.ImageUrl" class="control-label">Current Image</label><br />
+							<img src="@Model.Game!.ImageUrl" class="" title="Game Image" style="width: 300px; height: auto;" />
+							<span asp-validation-for="Game!.ImageUrl" class="text-danger"></span>
+						</div>
+						<div class="col-md-6 text-center align-items-center">
+							<label asp-for="ImageFile" class="control-label">New Image</label><br />
+							<img id="imagePreview" src="#" class="img-thumbnail" style="display:none; width: 300px; height: auto;" />
+							<span asp-validation-for="ImageFile" class="text-danger"></span>
+						</div>
 					</div>
-				</form>
-			</div>
-			<div class="col-md-4">
-				<div class="form-group text-center">
-					<label asp-for="Game!.ImageUrl" class="control-label">Current Image</label><br />
-					<img src="@Model.Game!.ImageUrl" class="img-thumbnail" title="Game Image" />
-					<span asp-validation-for="Game!.ImageUrl" class="text-danger"></span>
 				</div>
 			</div>
-			<div class="col-md-4">
-			<div class="form-group text-center">
-					<label asp-for="ImageFile" class="control-label">New Image</label><br />
-					<img id="imagePreview" src="#" class="img-thumbnail" style="display:none;" />
-					<span asp-validation-for="ImageFile" class="text-danger"></span>
+			<div class="row mt-3">
+				<div class="col-12 text-center">
+					<input type="submit" value="Save" class="btn btn-primary" style="background-color: #420599; color: #FFD43B;" />
+					<a asp-page="./Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
 				</div>
 			</div>
-		</div>
+		</form>
+	</div>
 
-	<script type="text/javascript">
-		function previewImage(event) {
-			var reader = new FileReader();
-			reader.onload = function(){
-				var output = document.getElementById('imagePreview');
-				output.src = reader.result;
-				output.style.display = 'block';
-			};
-			reader.readAsDataURL(event.target.files[0]);
-		}
-	</script>
+	<script src="~/js/games/curd.js"></script>
+
 </body>
