--- a/GameLibrary/Pages/Admin/Games/Index.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Index.cshtml
@@ -6,18 +6,19 @@
 }
 
 <body style="background-color: #000235; color: #FFD43B;">
-    <header>
-        <br />
-        <h1>Games</h1><br />
-
-        <p class="text-lg-end">
-            <a asp-page="Create" class="btn" style="background-color: #420599; color: #FFD43B;">Create New</a>
-        </p>
-
-    </header>
-
-    <div class="container">
-        <table class="table" style="background-color: #000235;">
+		<div class="container py-1">
+			<div class="row mb-4">
+				<div class="col-md-10">
+						<h1>Games</h1>
+				</div>
+				<div class="col-md-2 align-self-end">
+						<a asp-page="Create" class="btn" style="background-color: #420599; color: #FFD43B;">Create New</a>
+				</div>
+			</div>
+		</div>
+	<!--Table of all Games Section-->
+    <div class="container py-1">
+        <table class="table table-responsive" style="background-color: #000235;">
             <thead>
                 <tr style=" color:#FFD43B;">
                     <th style="color:#FFD43B;">Game Details</th>
@@ -32,13 +33,13 @@
                         <td>
                             <strong style="color:#FFD43B;">Title:</strong> @Html.DisplayFor(modelItem => item.Title)<br />
                             <strong style="color:#FFD43B;">Genre:</strong> @Html.DisplayFor(modelItem => item.Genre)<br />
-                            <strong style="color:#FFD43B;">Release Date:</strong> @Html.DisplayFor(modelItem => item.ReleaseDate.Date)<br />
+                            <strong style="color:#FFD43B;">Release Date:</strong> @item.ReleaseDate.ToString("MMMM dd, yyyy")<br />
                             <strong style="color:#FFD43B;">Description:</strong> @Html.DisplayFor(modelItem => item.Description)
                         </td>
                         <td>
-                            <img src="@item.ImageUrl" class="img-thumbnail" title="Game Image" />
+                            <img src="@item.ImageUrl" class="img-fluid rounded" title="Game Image" style="max-width:250px; min-width:100px; height: auto;" />
                         </td>
-                        <td>
+                        <td class="align-middle text-center">
                             <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm" style="background-color: #420599; color: #FFD43B;">Edit</a><br /><br />
                             <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-info btn-sm" style="background-color: #420599; color: #FFD43B;">Details</a><br /><br />
                             <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm" style="background-color: #420599; color: #FFD43B;">Delete</a>
