--- a/GameLibrary/Pages/Admin/Users/Edit.cshtml
+++ b/GameLibrary/Pages/Admin/Users/Edit.cshtml
@@ -5,41 +5,41 @@
     ViewData["Title"] = "Edit User";
 }
 
-<body style="color:#FFD43B;">
+<h1>Edit User</h1>
 
-    <header>
-        <h1>Edit User</h1>
-    </header>
+<div class="row container">
+    <div class="col-md-4">
+        <form method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <div class="row container">
-        <div class="col-md-4">
-            <form method="post" enctype="multipart/form-data">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="IdentityUser!.UserName" class="control-label">User Name</label>
+                <input asp-for="IdentityUser!.UserName" class="form-control" />
+                <span asp-validation-for="IdentityUser!.UserName" class="text-danger"></span>
+            </div>
 
-                <div class="form-group">
-                    <label asp-for="IdentityUser!.UserName" class="control-label">User Name</label>
-                    <input asp-for="IdentityUser!.UserName" class="form-control" />
-                    <span asp-validation-for="IdentityUser!.UserName" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="IdentityUser!.Email" class="control-label">Email</label>
+                <input asp-for="IdentityUser!.Email" class="form-control" />
+                <span asp-validation-for="IdentityUser!.Email" class="text-danger"></span>
+            </div>
 
-                <div class="form-group">
-                    <label asp-for="IdentityUser!.Email" class="control-label">Email</label>
-                    <input asp-for="IdentityUser!.Email" class="form-control" />
-                    <span asp-validation-for="IdentityUser!.Email" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label">Password</label>
+                <input asp-for="Password" class="form-control" type="password" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
 
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label">Password</label>
-                    <input asp-for="Password" class="form-control" type="password" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="SelectedRole" class="control-label">Role</label>
+                <select asp-for="SelectedRole" class="form-control" asp-items="Model.Roles"></select>
+                <span asp-validation-for="SelectedRole" class="text-danger"></span>
+            </div>
 
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" style="background-color: #420599; color: #FFD43B;" />
-                    <a asp-page="Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
-                </div>
-            </form>
-        </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-page="Index" class="btn">Back to List</a>
+            </div>
+        </form>
     </div>
-
-</body>
+</div>
