--- a/GameLibrary/Pages/Admin/Users/Delete.cshtml
+++ b/GameLibrary/Pages/Admin/Users/Delete.cshtml
@@ -5,38 +5,40 @@
     ViewData["Title"] = "Delete User";
 }
 
-<body style="color:#FFD43B;">
+<header>
+    <h1>Delete User</h1>
+    <h3>Are you sure you want to delete this user?</h3>
+</header>
 
-    <header>
-        <h1>Delete User</h1>
-        <h3>Are you sure you want to delete this user?</h3>
-    </header>
-
-    <div class="row">
-        <div class="col-md-6">
-            <dl class="row">
-                <dt class="col-sm-4">
-                    @Html.DisplayNameFor(model => model.IdentityUser!.UserName)
-                </dt>
-                <dd class="col-sm-8">
-                    @Html.DisplayFor(model => model.IdentityUser!.UserName)
-                </dd>
-                <dt class="col-sm-4">
-                    @Html.DisplayNameFor(model => model.IdentityUser!.Email)
-                </dt>
-                <dd class="col-sm-8">
-                    @Html.DisplayFor(model => model.IdentityUser!.Email)
-                </dd>
-            </dl>
-        </div>
+<div class="row">
+    <div class="col-md-6">
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.IdentityUser!.UserName)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.IdentityUser!.UserName)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.IdentityUser!.Email)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.IdentityUser!.Email)
+            </dd>
+            <dt class="col-sm-4">
+                Role
+            </dt>
+            <dd class="col-sm-8">
+                @Model.UserRole
+            </dd>
+        </dl>
     </div>
+</div>
 
-    <div class="row mt-3">
-        <form method="post">
-            <input type="hidden" asp-for="IdentityUser!.Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" style="background-color: #420599; color: #FFD43B;" />
-            <a asp-page="./Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
-        </form>
-    </div>
-
-</body>
+<div class="row mt-3">
+    <form method="post">
+        <input type="hidden" asp-for="IdentityUser!.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-page="./Index" class="btn">Back to List</a>
+    </form>
+</div>
