--- a/GameLibrary/Pages/Admin/UserFavorites/Create.cshtml
+++ b/GameLibrary/Pages/Admin/UserFavorites/Create.cshtml
@@ -17,19 +17,19 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <div class="form-group">
-                    <label asp-for="UserFavorite!.UserId" class="control-label">User</label>
-                    <select asp-for="UserFavorite!.UserId" class="form-control" asp-items="Model.Users">
+                    <label asp-for="SelectedUserId" class="control-label">User</label>
+                    <select asp-for="SelectedUserId" class="form-control" asp-items="Model.Users">
                         <option value="">Select a user</option>
                     </select>
-                    <span asp-validation-for="UserFavorite!.UserId" class="text-danger"></span>
+                    <span asp-validation-for="SelectedUserId" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="UserFavorite!.GameId" class="control-label">Game</label>
-                    <select asp-for="UserFavorite!.GameId" class="form-control" asp-items="Model.Games">
+                    <label asp-for="SelectedGameId" class="control-label">Game</label>
+                    <select asp-for="SelectedGameId" class="form-control" asp-items="Model.Games">
                         <option value="">Select a game</option>
                     </select>
-                    <span asp-validation-for="UserFavorite!.GameId" class="text-danger"></span>
+                    <span asp-validation-for="SelectedGameId" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
