Fixed some error
Fixed some error

--- a/GameLibrary/Pages/Index.cshtml
+++ b/GameLibrary/Pages/Index.cshtml
@@ -31,15 +31,15 @@
 			</div>
 		</div>
 
-		<img class="spaceship" src="/images/spaceship.webp" alt="spaceship">
-		<img class="spaceship1" src="/images/spaceship1.webp" alt="spaceship1">
+		<img class="RRspaceship" src="/images/RRspaceship.webp" alt="spaceship">
+		<img class="Uspaceship" src="/images/Ufo-spaceship.webp" alt="spaceship1">
 
 		<!-- About Section -->
 		<div class="about-section">
 			<div class="container">
 				<h2>What Is GameLibrary?</h2>
 				<p>
-					GAMELIB is the ultimate platform for gamers. Track your game collection, review the games you love, and
+					GameLibrary is the ultimate platform for gamers. Track your game collection, review the games you love, and
 					add upcoming titles to your library. Join a vibrant community of gaming enthusiasts today!
 				</p>
 				<div class="row">
