Resized images for better performance.
reduce size and dimensions of images for better performance.
fixed some diagnostics mentioned in Lighthouse.

--- a/GameLibrary/Pages/Index.cshtml
+++ b/GameLibrary/Pages/Index.cshtml
@@ -13,7 +13,7 @@
 
     <!-- Hero Section -->
     <div class="hero-section">
-        <img src="~/images/Gamer.webp" class="hero-image" />
+        <img src="~/images/Gamer.webp" class="hero-image" alt="background-image"/>
         <div class="hero-overlay"></div>
         <div class="hero-text">
             <h1 class="hero-title">Discover Our Library</h1>
@@ -31,8 +31,8 @@
         </div>
     </div>
 
-    <img class="RRspaceship" src="/images/RRspaceship.webp" alt="spaceship">
-    <img class="Uspaceship" src="/images/Ufo-spaceship.webp" alt="spaceship1">
+    <img class="RRspaceship" src="/images/RRspaceship.webp" alt="RRspaceship">
+    <img class="Uspaceship" src="/images/Ufo-spaceship.webp" alt="Uspaceship">
 
     <!-- About Section -->
     <div class="about-section">
