--- a/GameLibrary/wwwroot/css/index.css
+++ b/GameLibrary/wwwroot/css/index.css
@@ -87,7 +87,7 @@
     .hero-text h1 {
         color: #FFD43B;
         margin-top: 3rem;
-        font-size: 4rem;
+        font-size: 3.7rem;
         font-weight: bold;
         text-transform: uppercase;
         line-height: 1.2;
@@ -162,6 +162,7 @@
 
     .scroll-indicator img {
         height: 2rem;
+        width: 2rem;
     }
 
 /* About Section */
