--- a/GameLibrary/Pages/Moderator/Index.cshtml
+++ b/GameLibrary/Pages/Moderator/Index.cshtml
@@ -30,14 +30,16 @@
 <div class="row">
     <div class="col-md-6">
         <h2>Review Ratings</h2>
-        <canvas id="reviewRatingsChart"></canvas>
+        <canvas id="reviewRatingsChart"
+                data-chart-type="bar"
+                data-chart-label-text="Review Ratings"
+                data-chart-labels='@Html.Raw(Json.Serialize(Model.ReviewRatings.Keys))'
+                data-chart-data='@Html.Raw(Json.Serialize(Model.ReviewRatings.Values))'>
+        </canvas>
     </div>
 </div>
 
 @section Scripts {
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.1/dist/chart.min.js"></script>
-    <script src="~/js/charts.min.js" asp-append-version="true"></script>
-
-    <div id="reviewRatingsLabels" style="display: none;">@Html.Raw(Json.Serialize(Model.ReviewRatings.Keys))</div>
-    <div id="reviewRatingsData" style="display: none;">@Html.Raw(Json.Serialize(Model.ReviewRatings.Values))</div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.7/dist/chart.umd.min.js"></script>
+    <script src="~/js/graphs.min.js"></script>
 }
